recursion.lessons.recursion.square.FourSquare.scala.error
FourSquare:2: error: '=' expected but identifier found.
override def public void run() {
                    ^FourSquare:12: error: illegal start of simple expression
}
^